@@ -1,5 +1,8 @@
 2002-09-11  Roland McGrath  <roland@redhat.com>
 
+	* sysdeps/generic/dl-environ.c (unsetenv): Redo last fix without
+	strncmp, keeps the code smaller for a non-performance-critical case.
+
 	* sysdeps/generic/dl-environ.c (unsetenv): Rewritten using strncmp,
 	no longer wrongly matches arbitrary prefixes of NAME.
 	Reported by Jakub Jelinek <jakub@redhat.com>.
